[package]
name = "LoPy-cli"
version = "0.1.0"
authors = ["cNorspang <casper@norspang.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.22"
chrono = "0.4.19"
reqwest = { version = "0.11", features = ["blocking", "json"] }
hex = "0.4.3"
serde_json = "1.0"